# ASUKA

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/: import_cycle_budget.json
.github/scripts/: check_cuda_test_markers.py  check_import_cycle_budget.py
.github/workflows/: ci.yml  split-consistency.yml
asuka/: __init__.py  _epq_cy.pyx  active_space.py  drivers.py  solver.py
asuka/_solver/: README.md  __init__.py  config.py  core.py  cuda_policy.py  drt_cache.py  drt_runtime.py  dump_flags_runtime.py  init_runtime.py  kernel_cuda_runtime.py  kernel_runtime.py  matvec_cache_runtime.py  matvec_runtime.py  warm_state.py  warm_state_runtime.py
asuka/audit/: README.md  __init__.py  cuda.py
asuka/caspt2/: NAMING.md  README.md  __init__.py  driver.py  driver_asuka.py  energy.py  f3.py  fock.py  fock_df.py  hcoup.py  hzero.py  multistate.py  overlap.py  pt2lag.py  pt2lag_debug.py  pt2lag_df2e.py  result.py  rhs.py  rhs_df.py  shifts.py  sigder_native.py  sigma.py  solver.py  superindex.py  superindex_bridge.py  xms.py  xms_utils.py
asuka/caspt2/cuda/ext/: CMakeLists.txt
asuka/caspt2/cuda/ext/src/: caspt2_cuda_ext.cpp  caspt2_cuda_kernels.cu
asuka/chem/: README.md  __init__.py
asuka/ci/: README.md  __init__.py  cisd.py
asuka/cli/: README.md  __init__.py  cuda_audit.py  doctor.py  kernels.py
asuka/contract/: README.md  __init__.py
asuka/cuda/: README.md  _backend_cache_runtime.py  _backend_caps.py  _backend_csr_pipeline.py  _backend_epq_config.py  _backend_epq_table.py  _backend_hop_blocked_runtime.py  _backend_hop_runtime.py  _backend_offdiag_setup.py  _backend_offdiag_workspace.py  _backend_workspace_alloc.py  _backend_workspace_config.py  _backend_workspace_policy.py  _backend_workspace_utils.py  autotune.py  cublas_workspace.py  cuda_backend.py  cuda_davidson.py  cuda_linalg_backend.py  krylov_gcrotmk.py  mixed_precision.py  mixed_precision_gemm.py  mixed_precision_policy.py  mrci_hop.py  mrci_hop_tiled.py  rdm123_gpu.py  rdm_gpu.py
asuka/cuda/ext/: CMakeLists.txt
asuka/cuda/ext/src/: guga_cuda_ext.cpp
asuka/cuda/linalg_ext/: CMakeLists.txt
asuka/cuda/linalg_ext/src/: guga_cuda_linalg_ext.cpp  guga_cuda_linalg_kernels.cu
asuka/cueri/: ERI_QUARTET_IMPLEMENTATION_MAP.md  README.md  __init__.py  _eri_rys_cpu.pyx  _eri_sph_pack_cpu.pyx  _pair_coeff_cpu.pyx  active_space_dense_cpu.py  active_space_dense_gpu.py  ao2mo.py  api.py  auxbasis.py  basis.py  basis_cart.py  basis_cart_contracted.py  basis_subset.py  basis_utils.py  boys.py  build_cpu_ext.py  build_cuda_ext.py  cart.py  core.py  dense.py  dense_cpu.py  df.py  eri_dispatch.py  eri_utils.py  gpu.py  intor_sph_gpu.py  mol_basis.py  native_class_sets.py  pair_tables_cpu.py  reference_eri_cart.py  reference_ssss.py  screening.py  shell_pairs.py  sph.py  ssss.py  stream.py  tasks.py  tile_consumer.py  (+2 more)
asuka/cueri/cuda/ext/: CMakeLists.txt  cueri_cuda_kernels_wave1_generated_part1.ptx
asuka/cueri/cuda/ext/src/: cueri_cart2sph_tables.cuh  cueri_cuda_contract_fock_warp.cuh  cueri_cuda_contract_jk_warp.cuh  cueri_cuda_ext.cpp  cueri_cuda_ext_common.h  cueri_cuda_ext_part1.cpp  cueri_cuda_ext_part2.cpp  cueri_cuda_ext_part3.cpp  cueri_cuda_ext_part4.cpp  cueri_cuda_ext_part5.cpp  cueri_cuda_ext_part6.cpp  cueri_cuda_ext_part7.cpp  cueri_cuda_ext_part8.cpp  cueri_cuda_ext_part9.cpp  cueri_cuda_kernels.cu  cueri_cuda_kernels_api.h  cueri_cuda_kernels_cart2sph_eri.cu  cueri_cuda_kernels_dense_scatter.cu  cueri_cuda_kernels_df_deriv.cu  cueri_cuda_kernels_df_deriv_part1.cu  cueri_cuda_kernels_df_deriv_part10.cu  cueri_cuda_kernels_df_deriv_part11.cu  cueri_cuda_kernels_df_deriv_part12.cu  cueri_cuda_kernels_df_deriv_part13.cu  cueri_cuda_kernels_df_deriv_part14.cu  cueri_cuda_kernels_df_deriv_part15.cu  cueri_cuda_kernels_df_deriv_part16.cu  cueri_cuda_kernels_df_deriv_part17.cu  cueri_cuda_kernels_df_deriv_part2.cu  cueri_cuda_kernels_df_deriv_part3.cu  cueri_cuda_kernels_df_deriv_part4.cu  cueri_cuda_kernels_df_deriv_part5.cu  cueri_cuda_kernels_df_deriv_part6.cu  cueri_cuda_kernels_df_deriv_part7.cu  cueri_cuda_kernels_df_deriv_part8.cu  cueri_cuda_kernels_df_deriv_part9.cu  cueri_cuda_kernels_int1e_sph.cu  cueri_cuda_kernels_rys_generic.cu  cueri_cuda_kernels_rys_generic_deriv.cu  cueri_cuda_kernels_rys_generic_deriv_part1.cu  (+12 more)
asuka/cuguga/: README.md  __init__.py  autotune.py  blas_threads.py  davidson.py  drt.py  eri.py  record.py  row_stats.py  screening.py  state_cache.py
asuka/density/: README.md  __init__.py  api.py  dvr_grids.py  dvr_grids_device.py  grids.py  grids_device.py  lebedev.py  types.py
asuka/frontend/: README.md  __init__.py  _scf_build.py  _scf_cache.py  _scf_config.py  _scf_dense.py  _scf_dense_direct_methods.py  _scf_df_build.py  _scf_dispatch.py  _scf_keys.py  _scf_metadata.py  _scf_methods.py  _scf_run_config.py  _scf_spin.py  _scf_thc_common.py  _scf_thc_methods.py  _scf_xc_runtime.py  analysis.py  basis_bse.py  basis_gbs.py  basis_packer.py  df.py  molecule.py  one_electron.py  periodic_table.py  scf.py
asuka/geomopt/: README.md  __init__.py  constraints.py  meci.py  optimizer.py  scan.py
asuka/hf/: README.md  __init__.py  dense_eri.py  dense_jk.py  dense_scf.py  df_jk.py  df_jk_streamed.py  df_scf.py  direct_jk.py  direct_jk_cost.py  direct_scf.py  local_thc_config.py  local_thc_factors.py  local_thc_jk.py  local_thc_partition.py  local_thc_scf.py  nuc_grad_thc.py  thc_factors.py  thc_jk.py  thc_scf.py  thc_tc.py
asuka/hf/cuda/ext/: CMakeLists.txt
asuka/hf/cuda/ext/src/: hf_df_jk_cuda_ext.cpp  hf_df_jk_cuda_kernels.cu
asuka/include/: README.md
asuka/integrals/: README.md  __init__.py  _int1e_cart_cy.pyx  _int1e_cart_numba.py  _int1e_sph_numba.py  cart2sph.py  contract_df.py  cross_geometry.py  cueri_df.py  cueri_df_cpu.py  df_adjoint.py  df_context.py  df_diag.py  df_grad_context.py  df_integrals.py  df_packed_s2.py  (+16 more)
bench/: am1_gradient_bench.py
requirements/: build.txt  cuda.txt  cuda12.txt
tests/: conftest.py  test_all_sacasscf_grad_backends.py  test_orbital_tracking.py
(+494 files in other folders)
