[build-system]
requires = ["setuptools>=68", "wheel", "Cython", "numpy", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "asuka"
version = "0.1.0"
description = "GUGA/DRT-based electronic structure methods with CUDA acceleration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Zihan Pengmei", email = "zpengmei@uchicago.edu" },
]
keywords = ["quantum chemistry", "electronic structure", "guga", "ci", "cuda"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy",
  "basis_set_exchange",
  "numba",
]

[project.urls]
Homepage = "https://github.com/zpengmei/ASUKA"
Repository = "https://github.com/zpengmei/ASUKA"
Issues = "https://github.com/zpengmei/ASUKA/issues"

[project.optional-dependencies]
# CUDA packages (cupy, nvidia-* libs) are intentionally omitted here.
# Install them via conda:
#   conda install -c conda-forge cupy cudatoolkit
# pip install -e ".[cuda]" only builds the CUDA C extensions from source.
cuda = []
build = [
  "cmake",
  "ninja",
  "pybind11",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["asuka", "asuka.*"]
exclude = [
  # Development-only modules; may depend on optional third-party stacks (PySCF, etc.)
  "asuka.bench*",
  "asuka.test*",
]


[tool.setuptools.package-data]
asuka = [
  # Cython sources/includes
  "*.pyx",
  "*.pxi",
  # CUDA extension sources (for building from source/sdist)
  "cuda/ext/CMakeLists.txt",
  "cuda/ext/src/*.cu",
  "cuda/ext/src/*.cuh",
  "cuda/ext/src/*.cpp",
  "cuda/linalg_ext/CMakeLists.txt",
  "cuda/linalg_ext/src/*.cu",
  "cuda/linalg_ext/src/*.cpp",
  # cuERI CUDA extension sources (vendored under asuka.cueri)
  "cueri/cuda/ext/CMakeLists.txt",
  "cueri/cuda/ext/src/*.cu",
  "cueri/cuda/ext/src/*.cuh",
  "cueri/cuda/ext/src/*.cpp",
  "cueri/cuda/ext/src/*.h",
  "cueri/cuda/ext/src/generated/*.cu",
  # HF-THC CUDA extension sources
  "hf/thc/cuda/ext/CMakeLists.txt",
  "hf/thc/cuda/ext/src/*.cu",
  "hf/thc/cuda/ext/src/*.cuh",
  "hf/thc/cuda/ext/src/*.cpp",
  "hf/thc/cuda/ext/src/*.h",
  # Orbitals CUDA extension sources
  "orbitals/cuda_ext/CMakeLists.txt",
  "orbitals/cuda_ext/src/*.cu",
  "orbitals/cuda_ext/src/*.cuh",
  "orbitals/cuda_ext/src/*.cpp",
  "orbitals/cuda_ext/src/*.h",
  # CASPT2 CUDA extension sources
  "caspt2/cuda/ext/CMakeLists.txt",
  "caspt2/cuda/ext/src/*.cu",
  "caspt2/cuda/ext/src/*.cuh",
  "caspt2/cuda/ext/src/*.cpp",
  # Runtime data
  "cuguga/overlap/*.json",
  "semiempirical/data/*.json",
  "semiempirical/gpu/cuda/*.cu",
  "semiempirical/gpu/cuda/*.cuh",
  "xc/*.cu",
]
